--- a/PyTorch/2_quickstart_tutorial.ipynb
+++ b/PyTorch/2_quickstart_tutorial.ipynb
@@ -12,6 +12,38 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-y2SN-Hpokbm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "想保存到我的github， 分2-4步  \n",
+        "1)原链接只有save a copy as Github Gist,\n",
+        "2) 在新打开的Gisthub Gist才有 save a copy in Github.\n",
+        "\n",
+        "3)确认仓库和分支仓库 (Repository): 确认选择了正确的仓库，例如 bioinfo-gao/LLM。分支 (Branch): 确认选择了您要保存的分支（通常是 main 或 master）。\n",
+        "4) 手动输入完整路径在 “文件名” 输入框中，您需要输入 目录名/文件名 的完整结构。区域您的输入内容文件名 (File path)PyTorch/quickstart_tutorial.ipynb\n",
+        "\n",
+        "5)在该gihub 页面中点击colab 打开，此时如果有修改或者调试，点击save，即直接save到github ，无需其他转存步骤\n",
+        "\n",
+        "\n",
+        "在Github网页界面上，无法直接创建空目录。\n",
+        "到仓库主页。点击 “Add file” 按钮，然后选择 “Create new file”。\n",
+        "\n",
+        "如果您想创建名为 data 的目录，您输入的文件名应该是：data/.gitkeep\n",
+        "（输入 / 符号后，Github 会识别这是一个目录分隔符）。"
+      ],
+      "metadata": {
+        "id": "MHyZrwufl_nm"
+      }
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "RQdy_K-OkEFh"
