--- a/PyTorch/2_quickstart_tutorial.ipynb
+++ b/PyTorch/2_quickstart_tutorial.ipynb
@@ -29,7 +29,7 @@
         "3)确认仓库和分支仓库 (Repository): 确认选择了正确的仓库，例如 bioinfo-gao/LLM。分支 (Branch): 确认选择了您要保存的分支（通常是 main 或 master）。\n",
         "4) 手动输入完整路径在 “文件名” 输入框中，您需要输入 目录名/文件名 的完整结构。区域您的输入内容文件名 (File path)PyTorch/quickstart_tutorial.ipynb\n",
         "\n",
-        "5)在该gihub 页面中点击colab 打开，此时如果有修改或者调试，点击save，即直接save到github ，无需其他转存步骤\n",
+        "5)在该gihub 页面中点击colab 打开，此时如果有修改或者调试，点击save，即直接save到github ，无需其他转存步骤，也无需设置目录结构，即自动保存为原来的目录树下\n",
         "\n",
         "\n",
         "在Github网页界面上，无法直接创建空目录。\n",
