--- a/PyTorch/2_tensorqs_tutorial.ipynb
+++ b/PyTorch/2_tensorqs_tutorial.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "LVYOnPZnkk3W"
       },
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "IcGWSb85kk3Z"
       },
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "rBzUmBOvkk3a"
       },
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "WxTbcXkWkk3a"
       },
@@ -136,11 +136,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "HEnHJWEukk3b"
+        "id": "HEnHJWEukk3b",
+        "outputId": "1c44f2cc-778d-47aa-aa1d-7e6f0c71b78e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ones Tensor: \n",
+            " tensor([[1, 1],\n",
+            "        [1, 1]]) \n",
+            "\n",
+            "Random Tensor: \n",
+            " tensor([[0.8494, 0.7403],\n",
+            "        [0.5494, 0.3367]]) \n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "x_ones = torch.ones_like(x_data) # retains the properties of x_data\n",
         "print(f\"Ones Tensor: \\n {x_ones} \\n\")\n",
@@ -163,11 +182,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "TJ-jtv1Skk3b"
+        "id": "TJ-jtv1Skk3b",
+        "outputId": "3f16bc5e-ffcf-4470-d14f-015c9e820e85",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Random Tensor: \n",
+            " tensor([[0.5629, 0.6737, 0.7188],\n",
+            "        [0.1411, 0.5110, 0.6806]]) \n",
+            "\n",
+            "Ones Tensor: \n",
+            " tensor([[1., 1., 1.],\n",
+            "        [1., 1., 1.]]) \n",
+            "\n",
+            "Zeros Tensor: \n",
+            " tensor([[0., 0., 0.],\n",
+            "        [0., 0., 0.]])\n"
+          ]
+        }
+      ],
       "source": [
         "shape = (2,3,)\n",
         "rand_tensor = torch.rand(shape)\n",
@@ -203,11 +244,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "geAa9Rt-kk3b"
+        "id": "geAa9Rt-kk3b",
+        "outputId": "34d82fab-a257-4ae1-ad54-74817afa5b92",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Shape of tensor: torch.Size([3, 4])\n",
+            "Datatype of tensor: torch.float32\n",
+            "Device tensor is stored on: cpu\n"
+          ]
+        }
+      ],
       "source": [
         "tensor = torch.rand(3,4)\n",
         "\n",
@@ -226,33 +281,8 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Sc6BypGrkk3c"
-      },
-      "source": [
-        "Operations on Tensors\n",
-        "=====================\n",
-        "\n",
-        "Over 1200 tensor operations, including arithmetic, linear algebra,\n",
-        "matrix manipulation (transposing, indexing, slicing), sampling and more\n",
-        "are comprehensively described\n",
-        "[here](https://pytorch.org/docs/stable/torch.html).\n",
-        "\n",
-        "Each of these operations can be run on the CPU and\n",
-        "[Accelerator](https://pytorch.org/docs/stable/torch.html#accelerators)\n",
-        "such as CUDA, MPS, MTIA, or XPU. If you're using Colab, allocate an\n",
-        "accelerator by going to Runtime \\> Change runtime type \\> GPU.\n",
-        "\n",
-        "By default, tensors are created on the CPU. We need to explicitly move\n",
-        "tensors to the accelerator using `.to` method (after checking for\n",
-        "accelerator availability). Keep in mind that copying large tensors\n",
-        "across devices can be expensive in terms of time and memory!\n"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "7eIOqp5Gkk3c"
       },
@@ -284,11 +314,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "NTi0MR38kk3c"
+        "id": "NTi0MR38kk3c",
+        "outputId": "20c489a0-1d9f-4651-d144-f3f9770a5465",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "First row: tensor([1., 1., 1., 1.])\n",
+            "First column: tensor([1., 1., 1., 1.])\n",
+            "Last column: tensor([1., 1., 1., 1.])\n",
+            "tensor([[1., 0., 1., 1.],\n",
+            "        [1., 0., 1., 1.],\n",
+            "        [1., 0., 1., 1.],\n",
+            "        [1., 0., 1., 1.]])\n"
+          ]
+        }
+      ],
       "source": [
         "tensor = torch.ones(4, 4)\n",
         "print(f\"First row: {tensor[0]}\")\n",
@@ -313,11 +361,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
-        "id": "6pV-cQ4ykk3c"
+        "id": "6pV-cQ4ykk3c",
+        "outputId": "86c389b5-bee5-48fa-f4d9-e14d1f40fdf8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1., 0., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1.],\n",
+            "        [1., 0., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1.],\n",
+            "        [1., 0., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1.],\n",
+            "        [1., 0., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1.]])\n"
+          ]
+        }
+      ],
       "source": [
         "t1 = torch.cat([tensor, tensor, tensor], dim=1)\n",
         "print(t1)"
@@ -334,23 +397,96 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "print(tensor)\n",
+        "print(tensor.T)                # Transpose\n",
+        "print(tensor @ tensor.T)       # @ standrad matrix multiplication\n",
+        "print(tensor.matmul(tensor.T)) # @ standrad matrix multiplication 2nd method"
+      ],
       "metadata": {
-        "id": "aWq95AxNkk3c"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ggti2SAEpTrB",
+        "outputId": "0c725fe5-8598-4440-8d9a-a39db6c0ac11"
       },
-      "outputs": [],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1., 0., 1., 1.],\n",
+            "        [1., 0., 1., 1.],\n",
+            "        [1., 0., 1., 1.],\n",
+            "        [1., 0., 1., 1.]])\n",
+            "tensor([[1., 1., 1., 1.],\n",
+            "        [0., 0., 0., 0.],\n",
+            "        [1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1.]])\n",
+            "tensor([[3., 3., 3., 3.],\n",
+            "        [3., 3., 3., 3.],\n",
+            "        [3., 3., 3., 3.],\n",
+            "        [3., 3., 3., 3.]])\n",
+            "tensor([[3., 3., 3., 3.],\n",
+            "        [3., 3., 3., 3.],\n",
+            "        [3., 3., 3., 3.],\n",
+            "        [3., 3., 3., 3.]])\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[3., 3., 3., 3.],\n",
+              "        [3., 3., 3., 3.],\n",
+              "        [3., 3., 3., 3.],\n",
+              "        [3., 3., 3., 3.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "aWq95AxNkk3c",
+        "outputId": "5233752f-16ba-4821-9a79-8b15ecc79fbd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 0., 1., 1.],\n",
+              "        [1., 0., 1., 1.],\n",
+              "        [1., 0., 1., 1.],\n",
+              "        [1., 0., 1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ],
       "source": [
         "# This computes the matrix multiplication between two tensors. y1, y2, y3 will have the same value\n",
         "# ``tensor.T`` returns the transpose of a tensor\n",
         "y1 = tensor @ tensor.T\n",
         "y2 = tensor.matmul(tensor.T)\n",
         "\n",
+        "# 这两行代码用于进行矩阵乘法，并指定了一个预先存在的张量来存储结果\n",
         "y3 = torch.rand_like(y1)\n",
         "torch.matmul(tensor, tensor.T, out=y3)\n",
         "\n",
         "\n",
         "# This computes the element-wise product. z1, z2, z3 will have the same value\n",
-        "z1 = tensor * tensor\n",
+        "z1 = tensor * tensor      #  \"*\" vs \"@\"\n",
         "z2 = tensor.mul(tensor)\n",
         "\n",
         "z3 = torch.rand_like(tensor)\n",
@@ -370,11 +506,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "eHBy26tRkk3d"
+        "id": "eHBy26tRkk3d",
+        "outputId": "6ea5ce98-863f-4715-da16-a29027ae336e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12.0 <class 'float'>\n"
+          ]
+        }
+      ],
       "source": [
         "agg = tensor.sum()\n",
         "agg_item = agg.item()\n",
@@ -394,11 +542,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "b_OxmROgkk3d"
+        "id": "b_OxmROgkk3d",
+        "outputId": "3feb8958-56ee-4630-bbb1-a35ba9f29bf4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1., 0., 1., 1.],\n",
+            "        [1., 0., 1., 1.],\n",
+            "        [1., 0., 1., 1.],\n",
+            "        [1., 0., 1., 1.]]) \n",
+            "\n",
+            "tensor([[6., 5., 6., 6.],\n",
+            "        [6., 5., 6., 6.],\n",
+            "        [6., 5., 6., 6.],\n",
+            "        [6., 5., 6., 6.]])\n"
+          ]
+        }
+      ],
       "source": [
         "print(f\"{tensor} \\n\")\n",
         "tensor.add_(5)\n",
@@ -455,11 +623,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
-        "id": "AmhjuGP7kk3d"
+        "id": "AmhjuGP7kk3d",
+        "outputId": "1dba655e-cb42-4840-b312-f9eccab58eb3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "t: tensor([1., 1., 1., 1., 1.])\n",
+            "n: [1. 1. 1. 1. 1.]\n"
+          ]
+        }
+      ],
       "source": [
         "t = torch.ones(5)\n",
         "print(f\"t: {t}\")\n",
@@ -478,15 +659,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
-        "id": "izcufCj_kk3d"
+        "id": "izcufCj_kk3d",
+        "outputId": "5606b0e6-cba8-4b64-ebaa-8ad6b6ce17fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "t: tensor([2., 2., 2., 2., 2.])\n",
+            "n: [2. 2. 2. 2. 2.]\n"
+          ]
+        }
+      ],
       "source": [
         "t.add_(1)\n",
         "print(f\"t: {t}\")\n",
-        "print(f\"n: {n}\")"
+        "print(f\"n: {n}\") # changed at the same time"
       ]
     },
     {
@@ -501,7 +695,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "KyGamB-Vkk3e"
       },
@@ -522,11 +716,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "id": "Lj8nRLMwkk3e"
+        "id": "Lj8nRLMwkk3e",
+        "outputId": "844ed66d-ede6-46a9-879d-2377d0eb27f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "t: tensor([2., 2., 2., 2., 2.], dtype=torch.float64)\n",
+            "n: [2. 2. 2. 2. 2.]\n"
+          ]
+        }
+      ],
       "source": [
         "np.add(n, 1, out=n)\n",
         "print(f\"t: {t}\")\n",
