--- a/PyTorch/5_autogradqs_tutorial.ipynb
+++ b/PyTorch/5_autogradqs_tutorial.ipynb
@@ -13,7 +13,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "ZG Note: Click The TopRight Triangle beside the RAM/Disk to choose <font color=\" red\"> change runtime type ==> T4 GPU"
+        "ZG Note: Click The TopRight Triangle beside the RAM/Disk to choose <font color=\" red\"> change runtime type ==> T4 GPU\n",
+        "\n",
+        "After finish running all cod click the TopRight, now showing Connet T4 to <font color=\" blue\">  change runtimg ==> Manege Session ==> disconnet run time </font>\n",
+        "\n",
+        "如果修改之后，save 是自save to github gist,\n",
+        "You have to click ==> <font color=\" red\">  save to github again </font>"
       ],
       "metadata": {
         "id": "wcAR9g4lU91L"
