--- a/PyTorch/2_tensorqs_tutorial.ipynb
+++ b/PyTorch/2_tensorqs_tutorial.ipynb
@@ -11,6 +11,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "First click the top <font color=\" red\"> \"Runtime section\"==> change runtime type ==> G4   </font>  \n",
+        "Finally click the top <font color=\" red\"> \"Runtime section\"==> Manege Session ==> disconnected   </font>"
+      ],
+      "metadata": {
+        "id": "nHY-c-l8xdpr"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -58,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "IcGWSb85kk3Z"
       },
@@ -88,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "rBzUmBOvkk3a"
       },
@@ -112,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "id": "WxTbcXkWkk3a"
       },
@@ -136,10 +146,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "id": "HEnHJWEukk3b",
-        "outputId": "1c44f2cc-778d-47aa-aa1d-7e6f0c71b78e",
+        "outputId": "fa8a238a-9044-4fe4-82b8-4ccec8f00bcb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -154,8 +164,8 @@
             "        [1, 1]]) \n",
             "\n",
             "Random Tensor: \n",
-            " tensor([[0.8494, 0.7403],\n",
-            "        [0.5494, 0.3367]]) \n",
+            " tensor([[0.6239, 0.2111],\n",
+            "        [0.0163, 0.0096]]) \n",
             "\n"
           ]
         }
@@ -182,10 +192,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "id": "TJ-jtv1Skk3b",
-        "outputId": "3f16bc5e-ffcf-4470-d14f-015c9e820e85",
+        "outputId": "e693ab07-a339-4499-d927-6c1d3806c351",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -196,8 +206,8 @@
           "name": "stdout",
           "text": [
             "Random Tensor: \n",
-            " tensor([[0.5629, 0.6737, 0.7188],\n",
-            "        [0.1411, 0.5110, 0.6806]]) \n",
+            " tensor([[0.2100, 0.1474, 0.4288],\n",
+            "        [0.5592, 0.1221, 0.3857]]) \n",
             "\n",
             "Ones Tensor: \n",
             " tensor([[1., 1., 1.],\n",
@@ -244,10 +254,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "id": "geAa9Rt-kk3b",
-        "outputId": "34d82fab-a257-4ae1-ad54-74817afa5b92",
+        "outputId": "74ea9b44-1047-4985-f4df-814c30ef1e9a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -282,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
         "id": "7eIOqp5Gkk3c"
       },
@@ -314,10 +324,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {
         "id": "NTi0MR38kk3c",
-        "outputId": "20c489a0-1d9f-4651-d144-f3f9770a5465",
+        "outputId": "db0540a6-a6a5-4ed0-c7a8-3ccccbed9165",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -364,7 +374,7 @@
       "execution_count": 11,
       "metadata": {
         "id": "6pV-cQ4ykk3c",
-        "outputId": "86c389b5-bee5-48fa-f4d9-e14d1f40fdf8",
+        "outputId": "a722b092-a39e-49fd-b8d3-903f3fab3680",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -408,9 +418,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ggti2SAEpTrB",
-        "outputId": "0c725fe5-8598-4440-8d9a-a39db6c0ac11"
+        "outputId": "27bd499b-3d61-409e-8a9b-0783141df183"
       },
-      "execution_count": 14,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,28 +443,15 @@
             "        [3., 3., 3., 3.],\n",
             "        [3., 3., 3., 3.]])\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([[3., 3., 3., 3.],\n",
-              "        [3., 3., 3., 3.],\n",
-              "        [3., 3., 3., 3.],\n",
-              "        [3., 3., 3., 3.]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 14
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 13,
       "metadata": {
         "id": "aWq95AxNkk3c",
-        "outputId": "5233752f-16ba-4821-9a79-8b15ecc79fbd",
+        "outputId": "22df5925-b679-4fa3-d923-90a801da1e4c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -471,7 +468,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 13
         }
       ],
       "source": [
@@ -509,7 +506,7 @@
       "execution_count": 15,
       "metadata": {
         "id": "eHBy26tRkk3d",
-        "outputId": "6ea5ce98-863f-4715-da16-a29027ae336e",
+        "outputId": "ef1653d9-863d-4471-c3da-c52b44f8445b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -519,13 +516,13 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "12.0 <class 'float'>\n"
+            "92.0 <class 'float'>\n"
           ]
         }
       ],
       "source": [
         "agg = tensor.sum()\n",
-        "agg_item = agg.item()\n",
+        "agg_item = agg.item() # one-element tensor to scalar\n",
         "print(agg_item, type(agg_item))"
       ]
     },
@@ -535,8 +532,8 @@
         "id": "keZOgnsDkk3d"
       },
       "source": [
-        "**In-place operations** Operations that store the result into the\n",
-        "operand are called in-place. They are denoted by a `_` suffix. For\n",
+        "<font color=\" red\"> **In-place operations** </font> Operations that store the result into the\n",
+        "operand are called in-place. They are denoted by <font color=\" red\"> a  `_` suffix</font>. For\n",
         "example: `x.copy_(y)`, `x.t_()`, will change `x`.\n"
       ]
     },
@@ -545,7 +542,7 @@
       "execution_count": 16,
       "metadata": {
         "id": "b_OxmROgkk3d",
-        "outputId": "3feb8958-56ee-4630-bbb1-a35ba9f29bf4",
+        "outputId": "cd96c64d-1d3d-4394-9717-016092457595",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -555,15 +552,15 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[1., 0., 1., 1.],\n",
-            "        [1., 0., 1., 1.],\n",
-            "        [1., 0., 1., 1.],\n",
-            "        [1., 0., 1., 1.]]) \n",
-            "\n",
             "tensor([[6., 5., 6., 6.],\n",
             "        [6., 5., 6., 6.],\n",
             "        [6., 5., 6., 6.],\n",
-            "        [6., 5., 6., 6.]])\n"
+            "        [6., 5., 6., 6.]]) \n",
+            "\n",
+            "tensor([[11., 10., 11., 11.],\n",
+            "        [11., 10., 11., 11.],\n",
+            "        [11., 10., 11., 11.],\n",
+            "        [11., 10., 11., 11.]])\n"
           ]
         }
       ],
@@ -626,7 +623,7 @@
       "execution_count": 17,
       "metadata": {
         "id": "AmhjuGP7kk3d",
-        "outputId": "1dba655e-cb42-4840-b312-f9eccab58eb3",
+        "outputId": "19e4718a-ddc0-46fe-c1a8-ca7cf9337116",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -662,7 +659,7 @@
       "execution_count": 18,
       "metadata": {
         "id": "izcufCj_kk3d",
-        "outputId": "5606b0e6-cba8-4b64-ebaa-8ad6b6ce17fa",
+        "outputId": "0fe1b430-3391-435e-b8ca-5af609b4e0a5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -695,7 +692,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 19,
       "metadata": {
         "id": "KyGamB-Vkk3e"
       },
@@ -716,10 +713,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 20,
       "metadata": {
         "id": "Lj8nRLMwkk3e",
-        "outputId": "844ed66d-ede6-46a9-879d-2377d0eb27f2",
+        "outputId": "7b78009a-ea0a-43a7-a631-366b6c445e41",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -744,7 +741,6 @@
   "metadata": {
     "kernelspec": {
       "display_name": "Python 3",
-      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -761,8 +757,10 @@
     },
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
